--- a/src/Components/VeggiePlaceTable/VeggiePlaceTable.css
+++ b/src/Components/VeggiePlaceTable/VeggiePlaceTable.css
@@ -3,7 +3,7 @@ table {
     border: 0.5px solid black;
 }
 thead {
-    font-size: 1.2rem;
+    font-size: 4vmin;
     font-weight: bolder;
 }
 
